<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cálculos básicos"
        android:textColor="#00BCD4"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555">

        <Button
            android:id="@+id/btnSumar"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:hint="@string/btn_suma"
            android:textColorHint="#07CBDC"
            android:textSize="14sp"
            app:backgroundTint="#2E2D2D" />

        <Button
            android:id="@+id/btnRestar"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:hint="@string/btn_resta"
            android:textColorHint="#07CBDC"
            app:backgroundTint="#2E2D2D" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnMult"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:hint="@string/btn_multi"
            android:textColorHint="#07CBDC"
            app:backgroundTint="#2E2D2D" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:hint="@string/btn_division"
            android:textColorHint="#07CBDC"
            app:backgroundTint="#2E2D2D" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855">

        <EditText
            android:id="@+id/value1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_num1"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#5C5B5B"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/value2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_num2"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#5C5B5B"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>